# minidrive

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/minidrive/client/: config.hpp  logger.hpp  session.hpp  transfer_state_store.hpp
client/src/: config.cpp  logger.cpp  main.cpp  session.cpp  session_commands.cpp  session_sync.cpp  session_transfers.cpp  transfer_state_store.cpp
data/server_root/.minidrive/: users.json
docs/: architecture.md  protocol.md  todo.md
server/: CMakeLists.txt
server/include/minidrive/server/: config.hpp  filesystem.hpp  server.hpp  session.hpp  session_manager.hpp  transfer_registry.hpp  user_store.hpp
server/src/: filesystem.cpp  main.cpp  server.cpp  session.cpp  session_auth.cpp  session_common.cpp  session_common.hpp  session_download.cpp  session_files.cpp  session_manager.cpp  session_sync.cpp  session_upload.cpp  transfer_registry.cpp  user_store.cpp
shared/: CMakeLists.txt
shared/include/minidrive/: crypto.hpp  error_codes.hpp  framing.hpp  protocol.hpp  version.hpp
shared/include/minidrive/encoding/: base64.hpp
shared/src/: crypto.cpp  error_codes.cpp  framing.cpp  protocol.cpp  version.cpp
shared/src/encoding/: base64.cpp
tests/: CMakeLists.txt
tests/integration/: requirements_test.py  smoke.cpp
tests/unit/: server_components.cpp  shared_protocol.cpp
